<resources>
    <!--    Headings-->
    <string name="app_name">Small Solutions</string>
    <string name="WelcomeText">Welcome to</string>

    <!--    Form Textbox-->
    <string name="UserNameText">Name</string>
    <string name="PasswordText">Password</string>
    <string name="ForgetPasswordButton">Forget Password?</string>
    <string name="signInText">Login</string>
    <string name="SignUpText">Sign UP</string>
    <string name="SearchText">Search here</string>
    <string name="Employer">Employer</string>
    <string name="Employee">Employee</string>
    <string name="Choose_the_type_of_registration">Choose the type of registration</string>
    <string name="Name">Name</string>
    <string name="Email">Email ID</string>
    <string name="Contact">Contact</string>
    <string name="Exp">Experience</string>
    <string name="Age">Age</string>
    <string name="done">DONE</string>
    <string name="FillTheDetails">Fill the details</string>
    <string name="nextText">Next</string>

    <!--    Signup Activity -->
    <string name="selectImage">Select Image</string>

    <!--    Catagory activity text-->
    <string name="carpenter">Carpenter</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="mechanic">Mechanic</string>
    <string name="webDev">Web Developer</string>
    <string name="androidapp">App Developer</string>
    <string name="photoeditor">Photo Editor</string>
    <string name="videoeditor">Video Editor</string>
    <string name="DigitalMarketer">Digital Marketer</string>
    <string name="cook">Cook</string>

    <!--    DropDown hint text-->
    <string name="catagory">Select Catagory</string>
    <string name="Profession">Choose Profession</string>
    <string name="experience">Experience</string>

    <string name="more">more</string>

    <!--   Strings of home fragments -->
    <string name="Home">Home</string>
    <string name="calls">Calls</string>
    <string name="profile">Profile</string>
    <string name="category">Categories</string>
    <string name="hire_a_person">Choose Professionals To Hire</string>
    <string name="search_a_employee">Search Category</string>
    <string name="Recommended">Recommended Employees</string>
    <string name="you_may_also_like_this">You May Also Like This</string>
    <string name="appDev">App Developer</string>

    <!--    Navigation Drawer Strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Profile Activity Strings-->
    <string name="only_Profession">Profession</string>
    <string name="chatButton">Connect with Chat</string>


    <!--    Forget Password Box String-->
    <string name="confirm">Confirm</string>
    <string name="reset_password_here">Reset Password Here</string>
    <string name="message_in_forget_box">Enter your E-mail Id to get reset link</string>

    <!--    No Internet Activity String-->
    <string name="No_Data_message">It seems like your device has no internet connection</string>
    <string name="turnOnData">Please Turn On The Internet Connectivity</string>
    <string name="refresh">Refresh</string>


<!--    About Us Activity String-->
    <string name="akash">Akash Sharma</string>
    <string name="nitin">Nitin Poojary</string>

    <string name="Intro">We are the developers of SMALL SOLUTIONS. This is a college group project done by AKASH and NITIN.</string>


    <string name="synopsis">
        	Small Solutions is an android application that helps to connect Recruiter and Job Seekers. Our application acts as a mediator between Recruiter and Job Seeker by helping them contact with each other. Here Recruiter can hire Job Seeker for their work according to their skill sets by looking at their profile, and for that Job Seeker have to be registered themselves mentioning their skills. All they have to do is sign up for an account select their category i.e. Recruiter /Job Seeker and our interface will show them relevant interface accordingly.
    </string>
</resources>
