<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/UserName_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/UserNameText"
        app:hintTextAppearance="@font/bree_serif"
        android:textSize="18sp"
        android:fontFamily="@font/bree_serif"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textbox_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/PasswordText"
        app:hintTextAppearance="@font/bree_serif"
        android:textSize="18sp"
        android:fontFamily="@font/bree_serif"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textbox_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/UserName_edittext"
        app:layout_constraintTop_toBottomOf="@id/UserName_edittext"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintHorizontal_bias="1"
        android:text="@string/ForgetPasswordButton"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/bree_serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".26"
        android:text="@string/signInText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/bree_serif"
        android:background="@drawable/buttons_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext" />


</androidx.constraintlayout.widget.ConstraintLayout>