<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginRight="50dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/back"
                android:gravity="center"
                android:text="Edit Profile"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/confirmChanges"
                android:layout_width="25dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="50dp"
                android:src="@drawable/ic_done"
                app:tint="@color/white"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/profilePhotoEdit"
            app:layout_constraintStart_toStartOf="@id/profilePhotoEdit"
            app:layout_constraintEnd_toEndOf="@id/profilePhotoEdit"
            app:layout_constraintBottom_toBottomOf="@id/profilePhotoEdit"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhotoEdit"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="85dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/editProfilePhoto"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/blue"
            app:layout_constraintEnd_toEndOf="@id/profilePhotoEdit"
            app:layout_constraintBottom_toBottomOf="@+id/profilePhotoEdit" />

        <TextView
            android:id="@+id/removeProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove Profile Image"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/bree_serif"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/profilePhotoEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePhotoEdit"
            app:layout_constraintWidth_percent=".8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bree_serif"
                android:hint="@string/UserNameText"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPhoneNoTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTIL"
            app:layout_constraintWidth_percent=".8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="13dp"
            app:boxStrokeColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPhoneNoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bree_serif"
                android:inputType="number"
                android:hint="@string/Contact"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userAgeNoTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhoneNoTIL"
            app:layout_constraintWidth_percent=".8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="13dp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userAgeNoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bree_serif"
                android:inputType="number"
                android:hint="@string/Age"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userExperienceNoTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/userAgeNoTIL"
            app:layout_constraintTop_toBottomOf="@+id/userAgeNoTIL"
            app:layout_constraintBottom_toBottomOf="@+id/userExperienceUpdateDropDown"
            app:layout_constraintWidth_percent=".4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="13dp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userExperienceNoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bree_serif"
                android:inputType="number"
                android:hint="@string/experience"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userExperienceUpdateDropDown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:boxStrokeWidth="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:boxStrokeColor="@color/blue"
            android:hint="@string/experience"
            app:layout_constraintStart_toEndOf="@+id/userExperienceNoTIL"
            app:layout_constraintTop_toBottomOf="@+id/userAgeNoTIL"
            app:layout_constraintWidth_percent=".4">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_experience_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bree_serif"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:hintTextAppearance="@font/bree_serif"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="16sp"
            android:fontFamily="@font/bree_serif"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_layout"
            app:layout_goneMarginTop="20dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@id/userExperienceNoTIL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>